--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
   font-weight: 300;
   font-size: 16px;
   line-height: 1.7;
-  color: #828282;
+  color: #bf3636;
   background: #fff;
 }
 
