--- a/css/style.css
+++ b/css/style.css
@@ -92,7 +92,7 @@ h1, h2, h3, h4, h5, h6, figure {
   right: 0;
   padding: 25px 0;
   z-index: 1;
-  background: #edebe8;
+  background: #7fc3fa;
 }
 @media screen and (max-width: 768px) {
   .fh5co-nav {
